# PMV

./: .env.example  .gitignore  adv_testing.py  inspect_traces.py  inspect_traces_new.py  job.sh  pyproject.toml  reasoning_traces_analysis.json  reasoning_traces_analysis2.json  test.txt  train_qwen.py  train_qwen2.py  tx.txt
pmv/: aggregator.py  analyze_training.py  reward.py  testing.ipynb  train.py  train_cot.py  train_pure_stackelberg.py  train_qwen.py
pmv-debate/: pyproject.toml
pmv-debate/configs/experiments/: config_5verifiers.yaml  config_baseline.yaml  config_scaled_prover.yaml  config_softmin.yaml  config_zebra.yaml
pmv-debate/pmv/: __init__.py  adversarial_test.py  oversight.py  utils.py  zebra_logic.py  zebra_prover.py
pmv-debate/scripts/: diversity_analysis.sh  run_sweep.sh  train.sh
pmv-original/: README.md  advjob.sh  generate_experiments.py  notebook.ipynb  output.txt  pmv.py  run.sh  train_qwen_buggy.py
pmv-original/pmv/: aggregator.py  env.py  inspect_traces.py  reward.py  test.py  test_current_models.py  testing.ipynb  testing.py  train.py  train_cot.py  train_pure_stackelberg.py
pmv-original/pmv/configs/: default.yaml
pmv-original/pmv/models/: prover.py
pmv/configs/: config.yaml  config_pure_stackelberg.yaml  default.yaml
pmv/configs/experiments/: config_baseline.yaml  config_median.yaml  config_pe_margin.yaml  config_pe_min.yaml  config_zebra_5v.yaml
pmv/data/: math_dataset.py
pmv/models/: base.py  prover.py  verifier.py
pmv/pmv/: data.py  diversity_analysis.py  ensemble.py  main.py  prover.py  training.py  verifier.py
pmv/pmv/models/: __init__.py  base.py
pmv/scripts/: adversarial_test.sh
runs/pure_stackelberg_experiment/: events.out.tfevents.1749821907.ccc-login1.pok.ibm.com.83008.0
testing/: log_20251104_084014.txt  log_20251104_132939.txt  log_20251104_215754.txt  log_20251105_135740.txt  log_20251105_164454.txt  log_20251105_191253.txt  log_20251106_070811.txt  log_20251106_081708.txt  log_20251106_084408.txt  log_20251106_084421.txt
