[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pmv"
version = "0.1.0"
description = "Prover Multi-Verifier Games with Irving-Style Debate"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "pyyaml>=6.0",
    "sympy>=1.12",
    "datasets>=2.14.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pmv*"]
